--- a/lib/l10n/intl_bo.arb
+++ b/lib/l10n/intl_bo.arb
@@ -4282,7 +4282,7 @@
   "joinPublicTrip": "མི་ཚེས་ལ་ལོག་འབད།",
   "startOwnTrip": "ངེད་རང་གི་ལོག་ལ་སྦྱོར་བཅོས།",
   "@@locale": "bo",
-  "@@last_modified": "2025-12-03 11:37:05.020486",
+  "@@last_modified": "2025-12-12 11:22:54.583787",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -10388,6 +10388,11 @@
   },
   "messageLanguageMismatchMessage": "Bokmål mål språket ditt samsvarer ikke med denne meldingen. Oppdater målspråket ditt?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "Ita ne boma in this course. Click on any user’s avatar and “start conversation” to send a DM.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
