--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 11:37:15.815743",
+  "@@last_modified": "2025-12-12 11:23:09.320550",
   "about": "Prio",
   "@about": {
     "type": "String",
@@ -11727,6 +11727,11 @@
   },
   "messageLanguageMismatchMessage": "Via celolingvo ne kongruas kun ĉi tiu mesaĝo. Ĉu ĝisdatigi vian celolingvon?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "Ĉi tio estas ĉiuj en ĉi tiu kurso. Klaku sur la avatareto de iu ajn uzanto kaj \"komencu konversacion\" por sendi DM.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
