--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 11:36:29.117862",
+  "@@last_modified": "2025-12-12 11:22:16.072078",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -11687,6 +11687,11 @@
   },
   "messageLanguageMismatchMessage": "שפת היעד שלך אינה תואמת את ההודעה הזו. האם לעדכן את שפת היעד שלך?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "אלה כולם בקורס הזה. לחץ על התמונה של כל משתמש ו\"התחל שיחה\" כדי לשלוח הודעה פרטית.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
