--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 11:36:44.135739",
+  "@@last_modified": "2025-12-12 11:22:33.276034",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11731,6 +11731,11 @@
   },
   "messageLanguageMismatchMessage": "Mål språket ditt samsvarer ikke med denne meldingen. Vil du oppdatere målspråket ditt?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "Dette er alle i dette kurset. Klikk på hvilken som helst brukers avatar og \"start samtale\" for å sende en DM.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
