--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 11:36:31.334762",
+  "@@last_modified": "2025-12-12 11:22:19.241948",
   "about": "Sobre",
   "@about": {
     "type": "String",
@@ -10996,6 +10996,11 @@
   },
   "messageLanguageMismatchMessage": "Seu idioma de destino não corresponde a esta mensagem. Atualizar seu idioma de destino?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "Este é todo mundo neste curso. Clique no avatar de qualquer usuário e \"iniciar conversa\" para enviar uma DM.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
