--- a/lib/l10n/intl_ro.arb
+++ b/lib/l10n/intl_ro.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 11:36:22.939099",
+  "@@last_modified": "2025-12-12 11:22:10.631025",
   "about": "Despre",
   "@about": {
     "type": "String",
@@ -11373,6 +11373,11 @@
   },
   "messageLanguageMismatchMessage": "Limba țintă nu se potrivește cu acest mesaj. Doriți să actualizați limba țintă?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "Aceasta este toată lumea din acest curs. Faceți clic pe avatarul oricărui utilizator și „începeți conversația” pentru a trimite un mesaj direct.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
