--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-03 11:37:02.609418",
+  "@@last_modified": "2025-12-12 11:22:52.418002",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -10862,6 +10862,11 @@
   },
   "messageLanguageMismatchMessage": "உங்கள் இலக்கு மொழி இந்த செய்தியுடன் பொருந்தவில்லை. உங்கள் இலக்கு மொழியை புதுப்பிக்கவா?",
   "@messageLanguageMismatchMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "courseParticipantTooltip": "இந்த பாடத்தில் உள்ள அனைவரும் இதுவே. எந்த பயனரின் அவதாரில் கிளிக் செய்து \"சரசரி உரையாடலை தொடங்கு\" என்பதன் மூலம் ஒரு நேரடி செய்தி அனுப்பவும்.",
+  "@courseParticipantTooltip": {
     "type": "String",
     "placeholders": {}
   }
